# text-image-retrieval-gke

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-app-serving  Jenkinsfile  README.md  app-docker-compose.yaml  example.env  gunicorn_conf.py  prestart.sh  pyproject.toml
ansible/: inventory
ansible/playbooks/: create_compute_instance.yaml  deploy_jenkins.yml
app/: main.py
app/api/database/: qdrant_execute.py  vector_db.py
app/api/errors/: error_message.py
app/api/responses/: base.py
app/api/routes/: api_route.py  retrieval_route.py
app/api/services/: retrieval_service.py
app/core/: config.py
app/frontend/static/css/: style.css
app/frontend/static/js/: script.js
app/frontend/templates/: index.html
app/ml/notebooks/: demo_siglip.ipynb  demo_siglip_onnx.ipynb  export_onnx.ipynb  get_data.ipynb
app/ml/scripts/: download_files.py  embedding.py  prepare_data.py
helm_charts/app/: Chart.yaml  values.yaml
helm_charts/app/templates/: NOTES.txt  app_ingress.yaml  deployment.yaml
helm_charts/elk/elasticsearch/: values.yaml
helm_charts/elk/filebeat/: values.yaml
helm_charts/elk/filebeat/examples/deployment/: values.yaml
helm_charts/elk/kibana/: values.yaml
helm_charts/prometheus-grafana/: note.txt  values-prometheus.yaml
helm_charts/prometheus-grafana/kube-prometheus-stack/: Chart.yaml
helm_charts/prometheus-grafana/kube-prometheus-stack/charts/grafana/: Chart.yaml
helm_charts/prometheus-grafana/kube-prometheus-stack/templates/grafana/dashboards-1.14/: apiserver.yaml  (+25 more)
terraform/: main.tf  variables.tf
(+19 files in other folders)
