[tool.poetry]
name = "text-image-retrieval-gke"
version = "0.1.0"
description = ""
authors = ["hieuGoku <ngochieu02.ai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.3.1+cpu", source = "pytorch"}
torchvision = {version = "^0.18.1+cpu", source = "pytorch"}
python-dotenv = "^1.0.1"
qdrant-client = "^1.10.0"
datasets = "^2.20.0"
transformers = "^4.42.3"
sentencepiece = "^0.2.0"
sentence-transformers = "^3.0.1"
onnxruntime = "^1.18.1"
gdown = "^5.2.0"
google-cloud-storage = "^2.17.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.8.2"
gunicorn = "20.0.2"
python-multipart = "^0.0.9"
huggingface-hub = "^0.23.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
